# hegel-core

./: .envrc  .gitignore  CHANGELOG.md  README.md  RELEASE.md  flake.nix  justfile  pyproject.toml  tox.ini
.claude/: CLAUDE.md  changelog-guidance.md
.github/actions/install-tools/: action.yml
.github/scripts/: dispatch_to_libraries.py  release.py
.github/workflows/: ci.yml  lint.yml  release.yml  test.yml  typecheck.yml
docs/: SDK_DEVELOPMENT.md  getting-started.md  library-api.md  sdk-api.md
nix/: flake.nix
sdk/: justfile  pyproject.toml
sdk/src/hegel_sdk/: __init__.py  client.py  from_type.py  generators.py  session.py  stateful.py
sdk/tests/: conftest.py  test_from_type.py  test_properties.py  test_sdk.py  test_stateful.py
src/hegel/: __init__.py  __main__.py  conformance.py  hegeld.py  parser.py  protocol.py  runner.py  schema.py  sdk.py  server.py  test_server.py  tui.py  utils.py
src/hegel/protocol/: __init__.py  channel.py  connection.py  packet.py  stream.py  utils.py
tests/: client.py  conftest.py  test_client_mode.py  test_conformance.py  test_conformance_coverage.py  test_connection.py  test_hegel_decorator.py  test_hegeld_coverage.py  test_main.py  test_new_protocol.py  test_packet.py  test_parser.py  test_parser_coverage.py  test_process_management.py  test_protocol.py  test_protocol_coverage.py  test_runner.py  test_runner_coverage.py  test_schema.py  test_schema_processing.py  test_sdk_coverage.py  test_sdk_from_type.py  test_sdk_properties.py  test_server.py  test_test_server.py  test_tui.py  test_utils.py  utils.py
tests/client/: __init__.py  client.py  protocol.py
tests/conformance/: test_conformance.py  test_infrastructure.py
tests/conformance/tests/: binary.py  boolean.py  dict.py  float.py  integer.py  list.py  sampled_from.py  text.py
tests/tui/: test_app.py  test_integration.py  test_logic.py
