[project]
name = "hegel"
version = "0.4.0"
description = "Prototype universal property-based testing implementation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cbor2>=5.8.0",
    "click>=8.3.1",
    "exceptiongroup>=1.0.0; python_version < '3.11'",
    "hypothesis>=6.148.5",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=0.24.0",
    "mypy>=1.19.0",
    "coverage",
    "ruff>=0.14.10",
    "shed",
]

[project.scripts]
hegel = "hegel.__main__:main"

# tools
# =====

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "ASYNC",  # flake8-async
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "COM",    # flake8-commas
    "DJ",     # flake8-django
    "E",      # pycodestyle
    "F",      # Pyflakes
    "FBT",    # flake8-boolean-trap
    "FLY",    # flynt
    "G",      # flake8-logging-format
    "INT",    # flake8-gettext
    "ISC",    # flake8-implicit-str-concat
    "NPY",    # NumPy-specific rules
    "PD",     # pandas-vet
    "PIE",    # flake8-pie
    "PLE",    # Pylint errors
    "PT",     # flake8-pytest-style
    "RET504", # flake8-return
    "RSE",    # flake8-raise
    "SIM",    # flake8-simplify
    "T10",    # flake8-debugger
    "TID",    # flake8-tidy-imports
    "UP",     # pyupgrade
    "W",      # pycodestyle
    "YTT",    # flake8-2020
    "RUF",    # Ruff-specific rules
]
ignore = [
    "B008",
    "B018",
    "B023",
    "C408",
    "C420",
    "COM812",
    "DJ007",
    "DJ008",
    # "line too long". ruff uses tool.ruff.line-length both for this rule, and for `ruff format`.
    # We want ruff format to match black's 88 line length, so we set tool.ruff.line-length = 88. But
    # this is a formatter suggestion, not a rule, so we also disable the E501 lint.
    "E501",
    "E721",
    "E731",
    "E741",
    "FBT001",
    "FBT003",
    "PD011",
    "PIE790",  # See https://github.com/astral-sh/ruff/issues/10538
    "PT001",
    "PT003",
    "PT006",
    "PT007",
    "PT009",
    "PT011",
    "PT012",
    "PT013",
    "PT015",
    "PT017",
    "PT019",
    "PT023",
    "PT027",
    "PT031",
    "RUF005",
    "RUF017",
    "SIM102",
    "SIM105",
    "SIM108",
    "SIM114",
    "SIM115",
    "SIM300",
    "SIM905",
    "UP031",
    "UP037",
]

[tool.mypy]
python_version = "3.14"
platform = "linux"

allow_redefinition = true
disallow_untyped_decorators = true
disallow_incomplete_defs = true
no_implicit_optional = true
no_implicit_reexport = true

follow_imports = "silent"
ignore_missing_imports = true

strict_equality = true
warn_no_return = true
warn_unused_ignores = true
warn_unused_configs = true
warn_redundant_casts = true

disable_error_code = "annotation-unchecked"

[tool.coverage.run]
branch = true
parallel = true
concurrency = ["thread"]
source = ["hegel"]
# intended primarily for consumers
omit = ["src/hegel/conformance.py"]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_covered = true
exclude_also = [
    "raise AssertionError",
    "raise NotImplementedError",
]
