[build-system]
# require a recent setuptools for `license = ` support
requires = ["setuptools >= 78.1.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hegel-core"
version = "0.2.2"
authors = [
    { name = "David R. MacIver", email = "david@drmaciver.com" },
    { name = "Liam DeVoe", email = "orionldevoe@gmail.com"}
]
description = "Universal property-based testing protocol, built on Hypothesis"

readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["testing", "fuzzing", "property-based-testing"]
classifiers = [
    "Framework :: Hypothesis",
    "Intended Audience :: Developers",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Education :: Testing",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]

dependencies = [
    "cbor2>=5.8.0",
    "click>=8.3.1",
    "hypothesis>=6.148.5",
]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "mypy==1.19.1",
    "coverage==7.13.4",
    "ruff==0.15.6",
    "shed==2025.6.1",
    "exceptiongroup>=1.0.0; python_version < '3.11'",
]

[project.urls]
homepage = "https://hegel.dev"
source = "https://github.com/hegeldev/hegel-core"
# TODO update to hegel.dev location when we host it there?
changelog = "https://github.com/hegeldev/hegel-core/blob/main/CHANGELOG.md"
# TODO set to hegel.dev location when we host it there?
# documentation = "https://hegel.dev/TODO-docs-url-goes-here"
issues = "https://github.com/hegeldev/hegel-core/issues"

[project.scripts]
hegel = "hegel.__main__:main"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "ASYNC",  # flake8-async
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "COM",    # flake8-commas
    "DJ",     # flake8-django
    "E",      # pycodestyle
    "F",      # Pyflakes
    "FBT",    # flake8-boolean-trap
    "FLY",    # flynt
    "G",      # flake8-logging-format
    "INT",    # flake8-gettext
    "ISC",    # flake8-implicit-str-concat
    "NPY",    # NumPy-specific rules
    "PD",     # pandas-vet
    "PIE",    # flake8-pie
    "PLE",    # Pylint errors
    "PT",     # flake8-pytest-style
    "RET504", # flake8-return
    "RSE",    # flake8-raise
    "SIM",    # flake8-simplify
    "T10",    # flake8-debugger
    "TID",    # flake8-tidy-imports
    "UP",     # pyupgrade
    "W",      # pycodestyle
    "YTT",    # flake8-2020
    "RUF",    # Ruff-specific rules
]
ignore = [
    "B008",
    "B018",
    "B023",
    "C408",
    "C420",
    "COM812",
    "DJ007",
    "DJ008",
    # "line too long". ruff uses tool.ruff.line-length both for this rule, and for `ruff format`.
    # We want ruff format to match black's 88 line length, so we set tool.ruff.line-length = 88. But
    # this is a formatter suggestion, not a rule, so we also disable the E501 lint.
    "E501",
    "E721",
    "E731",
    "E741",
    "FBT001",
    "FBT003",
    "PD011",
    "PIE790",  # See https://github.com/astral-sh/ruff/issues/10538
    "PT001",
    "PT003",
    "PT006",
    "PT007",
    "PT009",
    "PT011",
    "PT012",
    "PT013",
    "PT015",
    "PT017",
    "PT019",
    "PT023",
    "PT027",
    "PT031",
    "RUF005",
    "RUF017",
    "SIM102",
    "SIM105",
    "SIM108",
    "SIM114",
    "SIM115",
    "SIM300",
    "SIM905",
    "UP031",
    "UP037",
]

[tool.mypy]
python_version = "3.14"
platform = "linux"

allow_redefinition = true
disallow_untyped_decorators = true
disallow_incomplete_defs = true
no_implicit_optional = true
no_implicit_reexport = true

follow_imports = "silent"
ignore_missing_imports = true

strict_equality = true
warn_no_return = true
warn_unused_ignores = true
warn_unused_configs = true
warn_redundant_casts = true

disable_error_code = "annotation-unchecked"

[tool.coverage.run]
branch = true
parallel = true
concurrency = ["thread"]
source = ["hegel"]
# conformance tests are intended primarily for consumers. We don't fully
# cover this in our tests.
omit = ["src/hegel/conformance.py"]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_covered = true
exclude_also = [
    "raise AssertionError",
    "raise NotImplementedError",
]
